--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ sourceCompatibility = '11'
 // lombok 설정 추가 시작
 configurations {
 	compileOnly {
-		extendsFrom annotaionProcessor
-	}
+		extendsFrom annotationProcessor
+	}ㅅ
 }
 // lombok 설정 추가 끝
 
